k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsu-app
  labels:
    app: devsu-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devsu-app
  template:
    metadata:
      labels:
        app: devsu-app
    spec:
      containers:
      - name: devsu-app
        image: robertperezinaipi/devsu-app
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /api/health
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /api/health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
