k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsu-app-service
spec:
  selector:
    app: devsu-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
